# cargo-lock-fetch

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cliff.toml  test_fetch.sh  test_on_crate.sh  test_popular.sh  test_vendor.sh
.github/workflows/: binary-releases.yaml  check-and-lint.yaml  crates-publish.yml  docker.yaml  dockerhub.yaml  release-packaging.yaml
examples/fetch-deps-to-layer/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
examples/fetch-deps-to-layer-from-docker/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: batches.rs  cargo.rs  cargo_config_toml.rs  cargo_lock_fetch.rs  cargo_toml.rs  cli.rs  lockfile_synth.rs  main.rs  registry_aliases.rs
test/: get_popular.sh  repos_fixture  sets_fixture_3_10_1_20250727  sets_fixture_3_150_10_20250727  test_all.sh  test_examples.sh  test_fetch.sh  test_fetch_repo.sh  test_sets.sh  test_vendor.sh  test_yanked.sh
