[package]
name = "cargo-lock-fetch"
version = "0.1.1"
edition = "2024"
rust-version = "1.86.0"

description = "cargo fetch and cargo vendor with just Cargo.lock"
authors =  ["Michał Trybus <komar007@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

repository = "https://github.com/komar007/cargo-lock-fetch"
categories = ["development-tools", "development-tools::cargo-plugins"]
keywords = ["cli", "cargo", "dependencies", "lockfile", "registry"]

[dependencies]
anyhow = "1.0.98"
cargo-lock = "10.1.0"
clap-cargo = "0.16.0"
clap = { version = "4.5.41", features = ["derive"] }
env_logger = { version = "0.11.8", features = ["kv"] }
indoc = "2.0.6"
itertools = "0.14.0"
log = { version = "0.4.27", features = ["kv", "kv_serde"] }
temp-dir = "0.1.16"
thiserror = "2.0.12"
toml_edit = "0.23.2"
unwrap-infallible = "0.1.5"
