[package]
name = "cargo-lock-fetch"
version = "0.2.1"
edition = "2024"
rust-version = "1.86.0"

description = "cargo fetch and cargo vendor with just Cargo.lock"
authors =  ["Michał Trybus <komar007@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

repository = "https://github.com/komar007/cargo-lock-fetch"
categories = ["development-tools", "development-tools::cargo-plugins", "command-line-utilities"]
keywords = ["cli", "cargo", "dependencies", "lockfile", "registry"]

[dependencies]
anyhow = "1.0.103"
cargo-lock = "10.1.0"
clap-cargo = "0.18.3"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = { version = "0.11.11", features = ["kv"] }
indoc = "2.0.7"
itertools = "0.15.0"
log = { version = "0.4.33", features = ["kv", "kv_serde"] }
shadow-rs = "2.0.0"
temp-dir = "0.1.16"
thiserror = "2.0.18"
toml_edit = "0.25.12"
unwrap-infallible = "1.0.0"

[build-dependencies]
shadow-rs = "2.0.0"
